# llmworks-starter-multi

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  Tiltfile  llmworks.code-workspace  pyproject.toml
.github/workflows/: monorepo-ci.yml
gitops/clusters/dev/: kustomization.yaml
gitops/infrastructure/: kustomization.yaml
gitops/infrastructure/istio/: istio-base.yaml  istio-ingressgateway.yaml  istiod.yaml
helm/svc-1/: Chart.yaml  values.yaml
helm/svc-1/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
helm/svc-2/: Chart.yaml  values.yaml
helm/svc-2/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
infra/: Pulumi.dev.yaml  Pulumi.schema.json  Pulumi.yaml  README.md  __main__.py  requirements.txt
infra/components/: eks.py  vpc.py
infra/live/: _env.hcl  root.hcl
infra/live/dev/eks/: terragrunt.hcl
infra/live/dev/us-west-2/: root.hcl
infra/live/dev/us-west-2/eks/: .terraform.lock.hcl  terragrunt.hcl
infra/live/dev/us-west-2/vpc/: terragrunt.hcl
infra/live/dev/vpc/: terragrunt.hcl
infra/modules/eks/: main.tf  outputs.tf  variables.tf
infra/modules/vpc/: main.tf  variables.tf
infra/stacks/dev/: __main__.py
k8s/dev/: kustomization.yaml  namespace.yaml
scripts/: check_known_first_party.sh  precommit_changed_services.sh
services/svc-1/: Dockerfile.dev  Dockerfile.prod  Makefile  pyproject.toml
services/svc-1/src/svc_1/: main.py
services/svc-1/src/svc_1/services/: greeting.py
services/svc-1/tests/unit/: test_api.py  test_contracts_common.py
services/svc-2/: Dockerfile.dev  Dockerfile.prod  Makefile  pyproject.toml
services/svc-2/src/svc_2/: main.py
services/svc-2/src/svc_2/services/: greeting.py
services/svc-2/tests/unit/: test_api.py  test_contracts_common.py
