[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svc-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.7",
  "black>=24.4",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["svc_1*"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings --cov=svc_1 --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E","F","I","UP","N","B"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["svc_1"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_lines = ["if __name__ == .__main__.:"]

[tool.coverage.warnings]
# Optional: quiet noisy warnings
disable = ["module-not-measured","module-not-imported"]

